[package]
name = "test_uuids"
version = "0.1.0"
authors = ["Ilias Makhiyanov <iliasmach@cloud-mind.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid={version="0.8.2", features=["v4", "v5", "serde"]}
nanoid="0.4.0"
fastuuid="0.3.0"
nano-id = "0.1.1"